Addd other fixtures
Test new db settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       - ./service:/service
     environment:
       - DB_HOST=database
-      - DB_NAME=dbname
-      - DB_USER=dbuser
-      - DB_PASS=pass
+      - DB_NAME=service_db
+      - DB_USER=service_user
+      - DB_PASSWORD=service_pwd
 
     command: >
       sh -c 'python manage.py runserver 0.0.0.0:8000'
@@ -21,6 +21,6 @@ services:
   database:
     image: postgres:14.6-alpine
     environment:
-      - POSTGRES_DB=dbname
-      - POSTGRES_USER=dbuser
-      - POSTGRES_PASSWORD=pass
+      - POSTGRES_DB=service_db
+      - POSTGRES_USER=service_user
+      - POSTGRES_PASSWORD=service_pwd
